--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ JWT_EXPIRES_IN = 1d
 CLOUDINARY_CLOUD_NAME=dkg5m3wty
 CLOUDINARY_API_KEY=958286362687966
 CLOUDINARY_API_SECRET=fY51RFl3S7lhbhUq6H3ZC7voe-g
+FRONTEND_URL = https://bmsc.vercel.app/login 
